// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-graph-editor/PolyLineSVG with points 1`] = `
.emotion-0 {
  fill: none;
  stroke: #000;
  stroke-width: 2px;
}

<svg
  height="1160"
  width="960"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    class="emotion-0"
    points="320,320 480,0 1280,1160"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;

exports[`react-graph-editor/PolyLineSVG with theme 1`] = `
.emotion-0 {
  fill: none;
  stroke: red;
  stroke-width: 1px;
}

<svg
  height="1160"
  width="960"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    class="emotion-0"
    points="320,320 480,0 1280,1160"
    vector-effect="non-scaling-stroke"
  />
</svg>
`;
